[package]
description = "Proxy support for with tokio"
license = "Apache-2.0"
homepage = "https://github.com/Phala-Network/tokio-proxy"
name = "phala-tokio-proxy"
version = "0.1.0"
authors = ["Jinhua Luo <home_king@163.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
url = "2.1.0"
bytes = "1"
log = "0.4"
